# gcn-leiden

./: .gitignore  DGI.py  README.md  evaluation.py  main.py  model.py  pyproject.toml  run_all.py  run_baseline.py  run_experiment.py  run_recal.py  run_validate.py
deploy/: launch_shards.sh
gcn_leiden/: __init__.py  datasets.py  loss.py  metrics.py  model.py  prior.py  results.py  telemetry.py  trainer.py
gcn_leiden/baselines/: __init__.py  classical.py  deepwalk.py  dgi.py  dmon.py
results/: runs.csv  runs_cora.csv
results/history/: gcn-leiden_citeseer_seed24.csv  gcn-leiden_cora_seed24.csv  gcn-louvain_citeseer_seed24.csv  gcn-louvain_cora_seed24.csv
utils/: data_processor.py  load_data.py  logger.py  options.py  path_manager.py  plot.py  pyg_data.py  result.py  time_manager.py  utils.py
