[project]
name = "less-is-more"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clusteval>=2.2.7",
    "matplotlib>=3.10.9",
    "munkres>=1.1.4",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch<2.3",
    "torch-geometric>=2.8.0",
]
