[project]
name = "gcn-leiden"
version = "0.0.1"
description = "Base Wang architecture with teaks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clusteval>=2.2.7",
    "leidenalg>=0.12.0",
    "matplotlib>=3.10.9",
    "munkres>=1.1.4",
    "networkx>=3.6.1",
    "numpy<2.0.0",
    "openpyxl>=3.1.5",
    "python-igraph>=1.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch<2.3",
    "torch-geometric>=2.8.0",
]
